Can change language on mobile customer applicatoin

--- a/clients/customer-client/src/assets/i18n/bs.json
+++ b/clients/customer-client/src/assets/i18n/bs.json
@@ -23,5 +23,6 @@
     "login": "prijava",
     "password": "lozinka",
     "log in": "prijavi se",
-    "Quickly create an account": "Kreiraj nabrzinu račun"
+    "Quickly create an account": "Kreiraj nabrzinu račun",
+    "language": "jezik"
 }
