--- a/clients/customer-client/src/assets/i18n/en.json
+++ b/clients/customer-client/src/assets/i18n/en.json
@@ -23,5 +23,6 @@
     "login": "login",
     "password": "password",
     "log in": "log in",
-    "Quickly create an account": "Quickly create an account"
+    "Quickly create an account": "Quickly create an account",
+    "language": "language"
 }
