Added desktop screen

--- a/clients/customer-client/src/assets/i18n/bs.json
+++ b/clients/customer-client/src/assets/i18n/bs.json
@@ -1,45 +1,46 @@
 {
-    "account": "račun",
-    "restaurants": "restorani",
-    "order history": "historija narudžbi",
-    "log out": "odjavi se",
-    "images": "slike",
-    "description": "opis",
-    "country": "zemlja",
-    "city": "grad",
-    "address": "adresa",
-    "postal code": "poštanski broj",
-    "phone": "telefon",
-    "menu items": "stavke menija",
-    "menus": "meniji",
-    "view more": "pogledaj više",
-    "your order": "tvoja narudžba",
-    "reset order": "resetuj narudžbu",
-    "select table": "izaberi sto",
-    "note for waiter (optional)": "napomena konobaru (neobavezno)",
-    "make order": "naruči",
-    "You didn't select any menu item.": "Niste odabrali ni jednu stavku menija.",
-    "username": "korisničko ime",
-    "login": "prijava",
-    "password": "lozinka",
-    "log in": "prijavi se",
-    "Quickly create an account": "Kreiraj nabrzinu račun",
-    "language": "jezik",
-    "total items": "ukupno stavki",
-    "price": "cijena",
-    "total price": "ukupna cijena",
-    "ordered": "naručeno",
-    "activate account": "aktiviraj račun",
-    "joined": "pridružio se",
-    "edit account": "ažuriraj račun",
-    "User has not selected a country.": "Korisnik nije odabrao državu.",
-    "User did not enter a description.": "Korisnik nije unio opis.",
-    "upload image": "dodaj sliku",
-    "remove": "ukloni",
-    "save": "sacuvaj",
-    "name": "ime",
-    "last name": "prezime",
-    "select country": "odaberi državu",
-    "update": "ažuriraj",
-    "add": "dodaj"
+  "account": "račun",
+  "restaurants": "restorani",
+  "order history": "historija narudžbi",
+  "log out": "odjavi se",
+  "images": "slike",
+  "description": "opis",
+  "country": "zemlja",
+  "city": "grad",
+  "address": "adresa",
+  "postal code": "poštanski broj",
+  "phone": "telefon",
+  "menu items": "stavke menija",
+  "menus": "meniji",
+  "view more": "pogledaj više",
+  "your order": "tvoja narudžba",
+  "reset order": "resetuj narudžbu",
+  "select table": "izaberi sto",
+  "note for waiter (optional)": "napomena konobaru (neobavezno)",
+  "make order": "naruči",
+  "You didn't select any menu item.": "Niste odabrali ni jednu stavku menija.",
+  "username": "korisničko ime",
+  "login": "prijava",
+  "password": "lozinka",
+  "log in": "prijavi se",
+  "Quickly create an account": "Kreiraj nabrzinu račun",
+  "language": "jezik",
+  "total items": "ukupno stavki",
+  "price": "cijena",
+  "total price": "ukupna cijena",
+  "ordered": "naručeno",
+  "activate account": "aktiviraj račun",
+  "joined": "pridružio se",
+  "edit account": "ažuriraj račun",
+  "User has not selected a country.": "Korisnik nije odabrao državu.",
+  "User did not enter a description.": "Korisnik nije unio opis.",
+  "upload image": "dodaj sliku",
+  "remove": "ukloni",
+  "save": "sacuvaj",
+  "name": "ime",
+  "last name": "prezime",
+  "select country": "odaberi državu",
+  "update": "ažuriraj",
+  "add": "dodaj",
+  "Please access the website via a mobile device. The desktop application is not yet available.": "Molimo pristupite stranici preko mobilnog uređaja. Desktop aplikacija još uvijek nije dostupna."
 }
