--- a/clients/customer-client/src/assets/i18n/en.json
+++ b/clients/customer-client/src/assets/i18n/en.json
@@ -41,5 +41,6 @@
     "last name": "last name",
     "select country": "select country",
     "update": "update",
-    "add": "add"
+    "add": "add",
+    "Please access the website via a mobile device. The desktop application is not yet available.": "Please access the website via a mobile device. The desktop application is not yet available."
 }
