Fix bug with date format and added more translation

--- a/mobile/customer_client/assets/i18n/bs.json
+++ b/mobile/customer_client/assets/i18n/bs.json
@@ -1,39 +1,57 @@
 {
-    "Account": "Račun",
+    "Account": "Racun",
     "Restaurants": "Restorani",
-    "Order History": "Historija Narudžbi",
+    "Order History": "Historija Narudzbi",
     "Favourite Menu Items": "Omiljene Stavke Menija",
     "Favourite Restaurants": "Omiljeni Restorani",
     "Language": "Jezik",
     "Log Out": "Odjavi Se",
     "Description": "Opis",
-    "Country": "Država",
+    "Country": "Drzava",
     "City": "Grad",
     "Address": "Adresa",
-    "Postal Code": "Poštanski broj",
+    "Postal Code": "Postanski broj",
     "Phone": "Telefon",
     "Images": "Slike",
     "Menu Items": "Stavke Menija",
     "Menus": "Meniji",
     "Add": "Dodaj",
     "Remove": "Ukloni",
-    "Your Order": "Tvoja Narudžba",
-    "Reset Order": "Resetuj Narudžbu",
+    "Your Order": "Tvoja Narudzba",
+    "Reset Order": "Resetuj Narudzbu",
     "Total Items": "Ukupno Stavki",
     "Price": "Cijena",
     "Select Your Table": "Odaberite svoj sto",
-    "Note for waiter (optional)": "Zabilješka za konobara (neobavezno)",
+    "Note for waiter (optional)": "Zabiljeska za konobara (neobavezno)",
     "ex. Coffee with milk": "npr. Kafa sa mlijekom",
-    "Order Preview": "Pregled Narudžbe",
-    "Make Order": "Naruči",
-    "Please Activate Account": "Molimo Aktivirajte Račun",
-    "Activate Account": "Aktiviraj Račun",
-    "Joined": "Pridružio se",
-    "Edit Account": "Uredi Račun",
-    "Save": "Sačuvaj",
-    "Username": "Korisničko ime",
+    "Order Preview": "Pregled Narudzbe",
+    "Make Order": "Naruci",
+    "Please Activate Account": "Molimo Aktivirajte Racun",
+    "Activate Account": "Aktiviraj Racun",
+    "Joined": "Pridruzio se",
+    "Edit Account": "Uredi Racun",
+    "Save": "Sacuvaj",
+    "Username": "Korisnicko ime",
     "Name": "Ime",
     "Last Name": "Prezime",
     "Select Country": "Select Country",
-    "Update": "Ažuriraj"
+    "Update": "Azuriraj",
+    "Login": "Prijava",
+    "Password": "Lozinka",
+    "Log In": "Prijavi se",
+    "Quickly create an account": "Kreiraj profil nabrzinu",
+    "Please enter valid username": "Molimo unisite pravilno korisnicko ime",
+    "Enter your username": "Unesite svoje korisnicko ime",
+    "Enter valid password.": "Unesite pravilnu lozinku.",
+    "Enter your password": "Unesite svoju lozinku",
+    "Employees": "Zaposlenici",
+    "View More": "Pogledaj Vise",
+    "Birth": "Rodjen",
+    "This menu doesn't have menu items": "Ovaj meni nema stavki.",
+    "Favourite Items": "Omiljene stavke",
+    "You have no favorite menu items.": "Nemate omiljene stavke menija.",
+    "You have no favorite restaurants.": "Nemate omiljenih restorana.",
+    "You have no orders.": "Nemate narudzbe.",
+    "Total Price": "Ukupna Cijena",
+    "Ordered": "Naruceno"
 }
