--- a/mobile/customer_client/assets/i18n/en.json
+++ b/mobile/customer_client/assets/i18n/en.json
@@ -35,5 +35,23 @@
     "Name": "Name",
     "Last Name": "Last Name",
     "Select Country": "Select Country",
-    "Update": "Update"
+    "Update": "Update",
+    "Login": "Login",
+    "Password": "Password",
+    "Log In": "Log In",
+    "Quickly create an account": "Quickly create an account",
+    "Please enter valid username": "Please enter valid username",
+    "Enter your username": "Enter your username",
+    "Enter valid password.": "Enter valid password.",
+    "Enter your password": "Enter your password",
+    "Employees": "Employees",
+    "View More": "View More",
+    "Birth": "Birth",
+    "This menu doesn't have menu items": "This menu doesn't have menu items",
+    "Favourite Items": "Favourite Items",
+    "You have no favorite menu items.": "You have no favorite menu items.",
+    "You have no favorite restaurants.": "You have no favorite restaurants.",
+    "You have no orders.": "You have no orders.",
+    "Total Price": "Total Price",
+    "Ordered": "Ordered"
 }
